Adopted to GCC and A4Tech Bloody B800 keyboard

--- a/FarMenu.ini
+++ b/FarMenu.ini
@@ -2,3 +2,5 @@ d:DEBUG: CLEAN BUILD
    mingw32-make.exe BUILD_MODE=debug clean all
 r:RUN: CLEAN BUILD
    mingw32-make.exe BUILD_MODE=run clean all
+c:CLEAN: CLEAN
+   mingw32-make.exe BUILD_MODE=run clean
